# goIt-python-web-11

./: docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 242ceaaade46_init.py  2dbe1d5ed38b_init.py  87604f3fa6ce_init.py  dce32fd6dc7f_init.py  e2dc89e00382_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
